# focus-trace

./: .env  CHANGELOG.md  Cargo.toml  README.md  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/commands/: changelog.md
.github/workflows/: release.yml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json  desktop.json
backend/icons/: icon.icns
backend/src/: commands.rs  dto.rs  error.rs  focus_groups.rs  lib.rs  main.rs  settings.rs  state.rs  util.rs
backend/src/db/: mod.rs  queries.rs  schema.rs
backend/src/telemetry/: browser.rs  focus.rs  mod.rs  network.rs  process.rs
frontend/: index.html
frontend/src/: app.tsx  styles.css
frontend/src/components/: app-layout.tsx  card.tsx  focus-timeline-card.tsx  page.tsx  panel-config-modal.tsx  panel.tsx  stat-tile.tsx  time-range-selector.tsx  update-checker.tsx
frontend/src/components/charts/: donut-chart.tsx  echart.tsx  focus-timeline-chart.tsx  time-series-area.tsx
frontend/src/hooks/: use-command.ts  use-telemetry.ts  use-tick.ts
frontend/src/lib/: colors.ts  echarts.ts  format.ts  ipc.ts  panels.ts  range.ts  types.ts
frontend/src/views/: app-detail-view.tsx  app-list-view.tsx  dashboard-view.tsx  dashboards-view.tsx  focus-view.tsx  groups-view.tsx  network-view.tsx  settings-view.tsx
scripts/: WindowsEnv.ps1  bump.ts
